Add docs for config apply REST API
